%% Modelo Entidad-Relación - App de Finanzas Personales
%% Todas las entidades de datos cuelgan de USUARIO (multi-usuario)

erDiagram
    USUARIO ||--o{ CATEGORIA        : "crea"
    USUARIO ||--o{ TRANSACCION      : "registra"
    USUARIO ||--o{ RECURRENTE       : "tiene"
    USUARIO ||--o{ SUSCRIPCION      : "tiene"
    USUARIO ||--o{ DEUDA            : "tiene"
    USUARIO ||--o{ INVERSION        : "tiene"
    USUARIO ||--o{ PATRIMONIO_SNAPSHOT : "acumula"

    USUARIO ||--o{ CUENTA           : "tiene"
    CUENTA  ||--o{ TRANSACCION      : "registra"
    CUENTA  ||--o{ TRANSACCION      : "contrapartida (transferencias)"

    CATEGORIA ||--o{ TRANSACCION    : "clasifica (null en transferencias)"
    CATEGORIA ||--o{ RECURRENTE     : "clasifica"
    CATEGORIA ||--o{ SUSCRIPCION    : "clasifica"

    SUSCRIPCION ||--o{ SUSCRIPCION_PRECIO : "historial"

    USUARIO {
        bigint   id PK
        varchar  email
        varchar  password
        varchar  nombre
        enum     role "USER / ADMIN"
    }

    CATEGORIA {
        bigint   id PK
        bigint   usuario_id FK
        varchar  nombre
        varchar  color "hex, ej #378ADD"
        enum     tipo "GASTO / INGRESO / MIXTO"
    }

    CUENTA {
        bigint   id PK
        bigint   usuario_id FK
        varchar  nombre
        decimal  saldo_inicial "saldo de partida; el actual se deriva sumando las transacciones"
    }

    TRANSACCION {
        bigint   id PK
        bigint   usuario_id FK
        bigint   cuenta_id FK
        bigint   categoria_id FK "null en transferencias"
        bigint   cuenta_contrapartida_id FK "la otra cuenta del traspaso"
        varchar  transferencia_id "mismo valor en los dos apuntes de una transferencia"
        enum     tipo "GASTO / INGRESO / INVERSION / TRANSFERENCIA"
        varchar  descripcion
        decimal  importe "con signo: negativo si sale de la cuenta"
        date     fecha
    }

    RECURRENTE {
        bigint   id PK
        bigint   usuario_id FK
        bigint   categoria_id FK
        varchar  nombre
        decimal  importe
        enum     frecuencia "MENSUAL / ANUAL"
        date     proxima_fecha
        varchar  notas
    }

    SUSCRIPCION {
        bigint   id PK
        bigint   usuario_id FK
        bigint   categoria_id FK
        varchar  nombre
        varchar  color "hex"
        boolean  activa
    }

    SUSCRIPCION_PRECIO {
        bigint   id PK
        bigint   suscripcion_id FK
        date     fecha "inicio de vigencia"
        decimal  precio
    }

    DEUDA {
        bigint   id PK
        bigint   usuario_id FK
        varchar  nombre
        varchar  tipo "Hipoteca / Prestamo / Tarjeta / Personal"
        decimal  importe_pendiente
        decimal  importe_original
        decimal  cuota
        decimal  interes "porcentaje"
        varchar  notas
    }

    INVERSION {
        bigint   id PK
        bigint   usuario_id FK
        varchar  nombre
        varchar  tipo "Fondo / Accion / Cripto / Deposito"
        decimal  importe_invertido
        decimal  valor_actual
        date     fecha_alta
    }

    PATRIMONIO_SNAPSHOT {
        bigint   id PK
        bigint   usuario_id FK
        int      anio
        int      mes
        decimal  inversion
        decimal  ahorro
        decimal  deuda
        decimal  gasto
    }
